kubernetes/apps/kube-system/kopiur/repository/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopiur
spec:
  hostnames: ["kopiur.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: http
  rules:
    - backendRefs:
        - name: rustfs-kopia-ui
          namespace: kube-system
          port: 51515
